--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Three-JS Template</title>
+    <title>Three-JS Basic Example</title>
     <meta
       name="description"
-      content="Description of the page less than 150 characters"
+      content="Simple 3D cube created with three.js"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#7932a8" />
 
     <!-- Placeholder favicon -->
     <link
